[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "loki"
version = "0.0.1"
authors = [{ name = "Mathias Örtenberg Toftås" }]
maintainers = [{ name = "Mathias Örtenberg Toftås" }]
license = { file = "LICENSE" }
keywords = ["parsing", "xml"]
dependencies = ["click", "Levenshtein"]

[project.optional-dependencies]
dev = ["pre-commit"]

[project.scripts]
loki = "loki.__init__:main"

[project.urls]
Repository = "https://github.com/MathiasToftas/loki"
